tests/ui/static/static-mut-foreign-requires-unsafe.stderr
error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-foreign-requires-unsafe.rs:6:5
   |
LL |     a += 3;
   |     ^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-foreign-requires-unsafe.rs:7:5
   |
LL |     a = 4;
   |     ^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/static-mut-foreign-requires-unsafe.rs:8:14
   |
LL |     let _b = a;
   |              ^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
